Update MongoHandler for file configuration
Update the __init__ method of the MongoHandler so that it works with a file configuration or without using the 'to' method.  Update tests for configuration testing

--- a/tests/logging-test.config
+++ b/tests/logging-test.config
@@ -21,7 +21,7 @@ propagate=1
 
 [handler_mongo]
 class=mongolog.handlers.MongoHandler
-args=('log',DEBUG)
+args=('log_test','_mongolog_test',)
 
 [formatter_brief]
 format=%(asctime)s %(message)s
